## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all md files that should be created from source files in the
# MD_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.md

MD_PAGES=root-morphology.md     \
	phonology-morphology.md     \
	clitics-morphology.md       \
	nouns-stems.md              \
	nouns-affixes.md            \
	adjectives-stems.md         \
	postpositions-stems.md      \
	adverbs-stems.md            \
	conjunctions-stems.md       \
	interjections-stems.md      \
	pronouns-stems.md           \
	bxr-propernouns-stems.md    \
	punctuation-stems.md        \
	subjunctions-stems.md       \
	verbs-stems.md              \
	propernouns-affixes.md      \
	verbs-affixes.md

include $(top_srcdir)/../giella-core/am-shared/doc-dirs-include.am
